[project]
name = "pdfcvt"
version = "0.1.0"
description = ""
authors = [
    {name = "YCLEE",email = "davidtheycl@naver.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymupdf (>=1.23.0)",
    "pdfplumber (>=0.10.0)",
    "pillow (>=10.0.0)",
    "pyyaml (>=6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
